--- a/10-11-22/style.css
+++ b/10-11-22/style.css
@@ -15,6 +15,14 @@ body {
   font-family: "Domine", sans-serif;
 }
 
+.loader {
+  opacity: 0;
+}
+
+.active {
+  opacity: 1;
+}
+
 .main {
   margin-top: 140px;
   position: absolute;
