--- a/code-week1.0/style.css
+++ b/code-week1.0/style.css
@@ -8,9 +8,9 @@
   transition: all 1s;
 }
 body {
-  /* display: flex;
+  display: flex;
   align-items: center;
-  justify-content: center; */
+  justify-content: center;
   min-height: 100vh;
   background-image: url(./background/main-background.jpg);
 }
@@ -33,15 +33,15 @@ body {
   margin: 0;
   padding: 0;
   font-size: 14px;
-  color: #424348;
+  color: rgb(53, 53, 53);
   scrollbar-color: dark;
   scrollbar-width: thin;
   overscroll-behavior: contain;
-  background: transparent;
+  background: rgb(233, 233, 233);
 }
 
 .option {
-  color: #721c24;
+  color: rgb(53, 53, 53);
   background: transparent;
   border-radius: 10px;
   opacity: 0.5;
@@ -252,7 +252,7 @@ header i {
   overflow: hidden;
 }
 
-.image-background-mobile {
+.image-background-mobile img {
   object-fit: cover;
 }
 
