--- a/code-week1.0/style.css
+++ b/code-week1.0/style.css
@@ -17,10 +17,10 @@ body {
 
 #select-location {
   height: 50px;
-  width: 200px;
+  width: 230px;
   display: block;
   position: absolute;
-  top: 200%;
+  top: 100%;
   left: 0;
   right: 0;
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
@@ -61,7 +61,6 @@ body {
 
 .wrapper {
   position: relative;
-  left: 60px;
   top: 00px;
   width: 230px;
   /*  background: #fff; */
@@ -70,12 +69,11 @@ body {
   opacity: 0.8;
 }
 .wrapper header {
-  display: flex;
+  text-align: center;
   font-size: 21px;
   font-weight: 500;
   color: #ffffff;
-  padding: 16px 15px;
-  align-items: center;
+  /*   padding: 16px 15px; */
   border-bottom: 1px solid #ccc;
 }
 header i {
@@ -269,7 +267,6 @@ header i {
 }
 
 .video-background video {
-  /*   position: absolute; */
   min-width: 100%;
   min-height: 100%;
   left: 50%;
@@ -297,9 +294,6 @@ header i {
   position: absolute;
   min-width: 100%;
   min-height: 100%;
-  /*  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%); */
   z-index: -1;
 }
 
