--- a/code-week1.0/style.css
+++ b/code-week1.0/style.css
@@ -70,7 +70,7 @@ body {
 }
 .wrapper header {
   text-align: center;
-  font-size: 21px;
+  font-size: 18px;
   font-weight: 500;
   color: #ffffff;
   /*   padding: 16px 15px; */
@@ -80,10 +80,11 @@ header i {
   font-size: 0em;
   cursor: pointer;
   margin-right: 8px;
+  padding-bottom: -28px;
 }
 .wrapper.active header i {
   margin-left: 5px;
-  font-size: 30px;
+  font-size: 18px;
 }
 .wrapper .input-part {
   margin: 20px 25px 30px;
