--- a/code-week/style.css
+++ b/code-week/style.css
@@ -296,14 +296,14 @@ header i {
 
 .main.active {
   transform: translateX(0);
-  height: 100vh;
+  height: 500px;
   width: 200px;
   overflow: scroll;
   scroll-behavior: smooth;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  justify-content: center;
+  justify-content: left;
   gap: 10px;
   background-color: transparent;
   border-radius: 10px;
@@ -314,7 +314,7 @@ header i {
 .main {
   /*   display: none; */
   transform: translateX(-400%);
-  height: 200vh;
+  height: 500px;
   transition: all 0.5s;
   width: 200px;
   display: flex;
@@ -341,6 +341,10 @@ header i {
   padding: 5px;
 }
 
+.card h4 {
+  text-align: center;
+}
+
 .card:hover {
   border: 2px solid white;
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
@@ -360,7 +364,11 @@ header i {
   color: black;
   border-radius: 10px;
   border: none;
-  margin: 10px;
+  margin: 14px;
+}
+
+.button-select:hover {
+  cursor: pointer;
 }
 
 @media (min-width: 600px) {
