--- a/03-11-22/style.css
+++ b/03-11-22/style.css
@@ -70,7 +70,7 @@ header {
 
 .menu {
   opacity: 0;
-  top: 150px;
+  /*   top: 150px; */
   left: 0;
   width: 100%;
   padding: 15px;
@@ -87,7 +87,7 @@ header {
   width: 100%;
   height: 100vh;
   position: fixed;
-  z-index: 10000;
+  z-index: 1000;
   background-color: white;
 }
 
@@ -201,16 +201,15 @@ button {
   width: 100%;
 }
 
-.img-div-big {
-  box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.09);
+.img-div:hover {
+  box-shadow: 0 0 15px 2px rgba(32, 32, 32, 0.7);
+  transform: translateY(-5px);
+  transition-duration: 1s;
+  cursor: pointer;
+}
+
+::-webkit-scrollbar-thumb {
   border-radius: 10px;
-  /* display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center; */
-  /* padding: 10px; */
-  width: 250px;
-  height: 400px;
 }
 
 h4 {
@@ -321,6 +320,7 @@ footer {
   display: flex;
   flex-direction: column;
   align-items: center;
+  scrollbar-width: 5px;
 }
 
 .card {
@@ -336,6 +336,8 @@ footer {
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.4);
   display: none;
+  align-items: center;
+  justify-content: center;
 }
 
 .modal {
@@ -344,23 +346,24 @@ footer {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(255, 255, 255);
   display: none;
+  z-index: 2000;
+  justify-content: center;
+  align-items: center;
 }
 
 .modal-content {
   position: relative;
-  margin-top: 30vh;
-  margin-left: 24vw;
   display: flex;
   flex-direction: column;
   align-items: center;
   border: none;
   background-color: rgb(126, 104, 82);
-  border-radius: 50px;
+  border-radius: 30px;
   width: 200px;
+  height: 15em;
   color: aliceblue;
-  padding-bottom: 20px;
   opacity: 1;
 }
 
@@ -380,6 +383,7 @@ footer {
   border: none;
   width: 150px;
   height: 35px;
+  padding-left: 10%;
 }
 
 .login-btn {
@@ -391,14 +395,21 @@ footer {
   height: 40px;
 }
 
+/* .modal-header {
+  display: flex;
+  width: 100%;
+} */
+
 .close-modal-btn {
   position: absolute;
   background-color: transparent;
-  color: rgb(255, 255, 255);
+  color: rgb(57, 57, 57);
   border: none;
   font-weight: bold;
-  top: 5px;
-  right: -60px;
+  font-size: 1.5em;
+  right: 10%;
+  width: fit-content;
+  transform: rotate(45deg);
 }
 
 .close-modal-btn:hover {
@@ -412,7 +423,6 @@ footer {
   /* WebKit browsers */
   color: rgb(96, 81, 66);
   font-family: "Domine", sans-serif;
-  padding-left: 20px;
 }
 
 @media only screen and (min-width: 768px) {
@@ -476,8 +486,6 @@ footer {
 
   .username,
   .password {
-    background-color: #999999;
-    color: aliceblue;
     height: 30px;
     border-radius: 30px;
     border: none;
