--- a/03-11-22/style.css
+++ b/03-11-22/style.css
@@ -25,6 +25,7 @@ header {
   z-index: 2;
   overflow: hidden;
 }
+
 .menu-btn span {
   width: 30px;
   height: 2px;
@@ -70,7 +71,6 @@ header {
 
 .menu {
   opacity: 0;
-  /*   top: 150px; */
   left: 0;
   width: 100%;
   padding: 15px;
@@ -133,6 +133,11 @@ nav a:hover {
 .hero-img img,
 .banner-img img {
   width: 100%;
+  height: 100%;
+}
+
+.hero-img img {
+  object-fit: cover;
 }
 
 .hero {
@@ -151,8 +156,15 @@ h1 {
   font-size: 18px;
 }
 
-h2 {
+.sales-title {
+  font-size: 1.5em;
   color: rgb(96, 81, 66);
+  padding: 0.7em;
+}
+
+.card-title {
+  font-weight: bold;
+  padding-bottom: 0.4em;
 }
 
 .hero-title p,
@@ -184,7 +196,6 @@ button {
   justify-content: flex-start;
   gap: 20px;
   padding: 20px;
-  /*  margin-left: 40px;  */
   box-sizing: border-box;
 }
 
@@ -243,7 +254,11 @@ h4 {
   object-fit: cover;
 }
 
-button:hover {
+.main-btn {
+  height: fit-content;
+}
+
+.main-btn:hover {
   color: rgb(175, 149, 123);
   background-color: aliceblue;
   border-radius: 20px;
@@ -328,17 +343,25 @@ footer {
   justify-content: center;
 }
 
-.background-grey-all-window {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(0, 0, 0, 0.4);
-  display: none;
-  align-items: center;
-  justify-content: center;
+/* Carousel */
+
+.carousel {
+  width: 70%;
+  display: block;
+  margin: 1em auto;
+  border-radius: 5px;
 }
+
+.carousel img {
+  border-radius: 10px;
+}
+
+.carousel-control-prev,
+.carousel-control-next {
+  height: 100%;
+}
+
+/* Modal window */
 
 .modal {
   position: fixed;
@@ -394,11 +417,6 @@ footer {
   width: 100px;
   height: 40px;
 }
-
-/* .modal-header {
-  display: flex;
-  width: 100%;
-} */
 
 .close-modal-btn {
   position: absolute;
@@ -491,5 +509,9 @@ footer {
     border: none;
     width: 300px;
     height: 35px;
+  }
+
+  .hero-img img {
+    height: 100vh;
   }
 }
