--- a/23-12-22/my-app/src/App.css
+++ b/23-12-22/my-app/src/App.css
@@ -1,10 +1,13 @@
 .App {
-  text-align: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
   background-color: rgb(33, 33, 33);
+  text-align: center;
   color: beige;
   margin: 0;
   padding: 5px;
-  min-height: 100vh;
+  height: 100vh;
 }
 
 .App-logo {
@@ -40,4 +43,8 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.main {
+  display: flex;
 }
