--- a/23-12-22/my-app/src/components/button/button.css
+++ b/23-12-22/my-app/src/components/button/button.css
@@ -3,9 +3,10 @@
   color: #fff;
   border-radius: 0.5em;
   border: none;
-  width: 10em;
+  width: 6em;
   height: 3em;
   margin: 0.5em;
+  box-shadow: 2px 2px 10px 1px rgba(255, 255, 255, 0.25);
 }
 
 .secondary {
@@ -13,7 +14,16 @@
   color: #fff;
   border-radius: 0.5em;
   border: none;
-  width: 10em;
+  width: 6em;
   height: 3em;
   margin: 0.5em;
+  box-shadow: 4px 5px 10px 1px rgba(255, 255, 255, 0.25);
+}
+
+.primary:hover {
+  cursor: pointer;
+}
+
+.secondary:hover {
+  cursor: pointer;
 }
