--- a/11-01-23/my-app/src/App.css
+++ b/11-01-23/my-app/src/App.css
@@ -2,6 +2,13 @@
   text-align: center;
   background-color: #252525;
   height: 100vh;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 1em;
+  padding: 1em;
+  box-sizing: border-box;
 }
 
 .App-logo {
