--- a/11-01-23/my-app/src/fetch/components/banks/Bank.css
+++ b/11-01-23/my-app/src/fetch/components/banks/Bank.css
@@ -1,7 +1,19 @@
 .bank {
+  width: 30em;
+  height: 15em;
   color: white;
-  border: 5px solid white;
+  box-shadow: 0px 0px 24px 3px rgba(255, 255, 255, 0.7);
   border-radius: 5px;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 1em;
+}
+
+.btn-refresh {
+  width: 5em;
+  height: 3em;
+  border-radius: 10px;
+  border: none;
 }
