--- a/router-react/src/App.module.scss
+++ b/router-react/src/App.module.scss
@@ -1,3 +1,14 @@
 .App {
-  color: red;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  color: white;
+  margin: 20px;
+  padding: 30px;
+}
+
+.App a {
+  color: white;
+  text-decoration: none;
+  font-size: large;
 }
