--- a/router-react/src/index.css
+++ b/router-react/src/index.css
@@ -1,13 +1,19 @@
+@import url("https://fonts.googleapis.com/css2?family=Anek+Bangla:wght@200&display=swap");
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "Anek Bangla", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: rgb(5, 101, 0);
+  background: linear-gradient(
+    90deg,
+    rgba(5, 101, 0, 1) 0%,
+    rgba(255, 55, 0, 1) 100%
+  );
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
