--- a/react-global-todo-list/src/App.module.scss
+++ b/react-global-todo-list/src/App.module.scss
@@ -1,6 +1,11 @@
 .App {
   display: flex;
+  width: fit-content;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: #ebebeb;
+  border-radius: 10px;
+  padding: 10px;
+  margin: 20px;
 }
