--- a/react-global-todo-list/src/components/navbar/index.module.scss
+++ b/react-global-todo-list/src/components/navbar/index.module.scss
@@ -1,3 +1,8 @@
-.Navbar {
-  border: 2px solid salmon;
+.Navbar input {
+  border-radius: 10px;
+  height: 50px;
+  border: none;
+  font-family: "Montserrat", sans-serif;
+  padding: 0 10px;
+  outline: none;
 }
