--- a/vite-note/src/coponents/addNote/index.module.scss
+++ b/vite-note/src/coponents/addNote/index.module.scss
@@ -1,3 +1,34 @@
 .AddNote {
-  width: 40%;
+  width: 20%;
+
+  h2 {
+    margin: 0;
+  }
+
+  form {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  .addField {
+    border-radius: 10px;
+    height: 50px;
+    border: none;
+    font-family: "Montserrat", sans-serif;
+    padding: 0 10px;
+    outline: none;
+  }
+
+  .addBtn {
+    border-radius: 20px;
+    margin-top: 10px;
+    height: 50px;
+    border: none;
+    font-family: "Montserrat", sans-serif;
+    padding: 0 10px;
+    outline: none;
+    background-color: rgb(246, 193, 176);
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.35);
+  }
 }
