--- a/vite-note/src/coponents/noteContent/index.module.scss
+++ b/vite-note/src/coponents/noteContent/index.module.scss
@@ -1,3 +1,17 @@
 .NoteContent {
-  width: 60%;
+  width: 80%;
+
+  input {
+    border-radius: 10px;
+    height: 50px;
+    border: none;
+    font-family: "Montserrat", sans-serif;
+    padding: 0 10px;
+    outline: none;
+    margin: 0 20px;
+  }
+
+  h2 {
+    margin: 0 20px;
+  }
 }
