--- a/vite-note/src/coponents/noteItem/index.module.scss
+++ b/vite-note/src/coponents/noteItem/index.module.scss
@@ -5,11 +5,11 @@
   flex-direction: column;
   align-items: center;
   gap: 10px;
-  width: 50%;
-  /*  height: 50px; */
+  width: 180px;
+  height: 180px;
   cursor: pointer;
   font-size: 1rem;
-  padding: 40px;
+  padding: 10px;
 
   &:hover {
     font-size: 1.05rem;
@@ -17,5 +17,9 @@
     -webkit-box-shadow: 5px 5px 19px 3px rgba(0, 0, 0, 0.46);
     box-shadow: 5px 5px 19px 3px rgba(0, 0, 0, 0.46);
     transform: scale(1.003, 1);
+  }
+
+  .NoteTitle {
+    font-weight: bold;
   }
 }
